--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "https://masooniez.github.io/my-app",
+  "homepage": "https://masooniez.github.io/react-portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
